some final corrections before sendign to Giuseppe

--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -443,17 +443,16 @@ This necessitates $S_2 = S_3$ and $S_6 = S_7$, and thus allows us to consider on
 as a minimal model that still demonstrates the crankshaft-like behavior.
 
 \section{Conclusions}
-The novel topologically protected four-state magnetoelectric switching found in GdMn$_2$O$_5$ originates from a unique large-amplitude collective mode -- the full-circle rotation of half the spins. 
-%
-This low-energy magnetic mode is coupled to a relatively large electric polarization and the spin rotation gives rise to polarization reversals. 
-%
-Remarkably, this rather complex spin and charge dynamics can be induced simply by increasing and decreasing the magnetic field, applied at a magic angle with respect to the crystallographic $a$-axis. This idea may find applications, such as in an electric counter of magnetic field pulses. 
-%
-%
-The robust unidrectional spin rotation originates from the asymmetric evolution of the energy landscape, and corresponds to an incontractible loop in the order parameter space. 
-This is a demonstration of the topological nature of the switching behavior in this material.
-%
-% Our findings break the ground for further research into other topologically-protected switching phenomena in ferroic materials.
+We used a relatively general and simple, quasi-classical spin model in order to describe a never before observed four-state switching loop in GdMn$_2$O$_5$.
+The model reproduces the experimental measurements well, and from further analysis it leads to the conclusion that this behavior is topologically protected by the presence of two, more normal, two-state magnetoelectric switching regimes.
+While we deviced a set of model parameters to reproduce the behavior in GdMn$_2$O$_5$, it turns out that a wide set of model parameters can generate the same behavior.
+Furthermore, due to the topological nature of the effect, we posit that the screening for further materials exhibiting a similar behavior would be relatively simple since only high and low angle regimes need to be identified.
+The magic angle boundary region will then necessarily exist at an intermediate angle.
 
-
+We also found that the novel four-state regime comes together with a unique large-amplitude collective mode -- the full-circle rotation of half the spins.
+The robust unidrectional spin rotation originates from the asymmetric evolution of the energy landscape, and corresponds to an incontractible loop in the order parameter space, ultimately leading to the topological nature of the switching in this material.
+This is a microscopic analogue to the crankshaft in a car, transforming linear back-and-forth motion of the applied magnetic field (the piston) into circular motion of the spins (crankshaft).
+Due to different behavior of the two chains in GdMn$_2$O$_5$, i.e. one doing a full-circle rotation while the other toggles, the double sweep of the magnetic field is accompanied by two reversals of the electric polarization.
+%
+One could envision a theoretical application of this behavior as an electric counter of magnetic field pulses.
 \printbibliography
